--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,7 +29,69 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+
+@font-face {
+  font-family: "SPD_TheSans Light";
+  src: url('/fonts/SPD_TheSans_TT3_.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "SPD_TheSans Bold";
+  src: url('/fonts/SPD_TheSans_TT8_.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: "SPD_TheSans Regular";
+  src: url('/fonts/SPD_TheSans_TT5_.ttf') format('truetype');
+}
+
+:root {
+  --ifm-font-family-base: "SPD_TheSans Regular"
+}
+
 #calendar-view {
   width: 100%;
-  height: 60vh;
+  height: 80vh;
+}
+
+.profile-row{
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: space-around;
+}
+
+.profile {
+text-align: center;
+}
+
+.profile-a-img {
+  height: 54px;
+  width: 54px;
+  margin: 4px;
+}
+
+.profile-img {
+  height: 104px;
+  width: 104px;
+  border-radius: 52px;
+}
+
+.machmit {
+  background-color: #E3000F;
+  color: white;
+  height: 82vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.machmit-img {
+  height: 84px;
+}
+
+.machmit-headline {
+  font-size: 62px;
+  font-family: "SPD_TheSans Bold";
 }
