--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -49,6 +49,13 @@
   --ifm-font-family-base: "SPD_TheSans Regular"
 }
 
+.footer__copyright a img {
+  height: 24px;
+  vertical-align: middle;
+  margin-left: 12px;
+  margin-right: 8px;
+}
+
 #calendar-view {
   width: 100%;
   height: 80vh;
@@ -66,15 +73,19 @@ text-align: center;
 }
 
 .profile-a-img {
-  height: 54px;
-  width: 54px;
+  width: 42px;
+  max-height: 40px;
   margin: 4px;
+  padding-left: 2px;
+  padding-right: 2px;
+  vertical-align: middle;
 }
 
 .profile-img {
   height: 104px;
   width: 104px;
   border-radius: 52px;
+  object-fit: cover;
 }
 
 .machmit {
