--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -70,7 +70,7 @@ h1 {
 }
 
 h2 {
-  font-family: "SPD_TheSansVersal Bold";
+  font-family: "SPD_TheSansVersal Regular";
   text-transform: uppercase;
 }
 
