--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -119,6 +119,7 @@ text-align: center;
   width: 104px;
   border-radius: 52px;
   object-fit: cover;
+  background-color: #E3000F;
 }
 
 .machmit {
