--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -101,6 +101,13 @@ footer {
   justify-content: space-around;
 }
 
+@media (max-width: 600px) {
+  .profile-row {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .profile {
 text-align: center;
 }
