--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -134,6 +134,9 @@ text-align: center;
 .main-machmit {
   background-color: #E3000F;
   height: 94vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .machmit {
